# Android

so/dlopen/app/: build.gradle
so/dlopen/app/src/androidTest/java/com/example/dlsymdemo/: ExampleInstrumentedTest.java
so/dlopen/app/src/main/cpp/: CMakeLists.txt
so/dlopen/app/src/main/cpp/comm/: CMakeLists.txt  other.cpp  other.h
so/dlopen/app/src/main/cpp/test/: CMakeLists.txt  dlsymdemo.cpp  main.cpp
so/dlopen/app/src/main/java/com/example/dlsymdemo/: MainActivity.java
so/dlopen/app/src/main/res/layout/: activity_main.xml
so/dlopen/app/src/test/java/com/example/dlsymdemo/: ExampleUnitTest.java
so/dlopen/gradle/wrapper/: gradle-wrapper.properties
